# kint

./: .gitignore  README.md
xi-int/: Makefile.am  README  TODO  configure.ac  configure.bak
xi-int/docs/: APPS  KBUGS  Makefile  cvegen  cvetex  linux.html
xi-int/lib/: .gitignore  Makefile.am
xi-int/lib/inttrap/: README  add.c  cast.c  div.c  index.c  inttrap.h  mul.c  rem.c  shift.c  sub.c
xi-int/src/: .gitignore  AnnotateAction.cc  AnnotateAction.h  AnnotationManager.cc  AnnotationManager.h  CallInfo.cc  CallInfo.h  GEPUnroll.cc  Hoist.cc  IntAction.cc  IntRange.cc  IntRange.h  IntermediateFile.cc  IntermediateFile.h  JSONWriter.h  Linker.cc  Linker.h  LowerAnnotation.cc  LowerOverflow.cc  Makefile.am  Makefile.am.bak  Makefile_bak  Overflow.cc  PHICombine.cc  RangeAnalysis.cc  RangeInfo.cc  RangeInfo.h  RangeWorkList.h  RewriteAction.cc  RewriteAction.h  SMTSolver.h  SPConstantProp.cc  SysctlRange.cc  TaintInfo.cc  TaintInfo.h  TautologicalCompare.cc  Trap.h  TrapAliasAnalysis.cc  TrapCombine.cc  TrapGen.cc  (+13 more)
xi-int/tools/: .gitignore  Makefile.am  add.bc  bugreport  cint-gdb  cintld  dlname  gccint-config.i386  gccint-config.x86_64  gccint.frag  intsat-gdb  linkbc  linuxpp  lispp  rangecheck  satlinux.frag  smtprint
xi-int/tools/intmatch/asm/: bug.h
xi-int/xcode/int.xcodeproj/: project.pbxproj
xi-int/xcode/libcint/: libcint-Prefix.pch  libcintTarget.xcconfig
xi-int/xcode/libintmatch/: libintmatch-Prefix.pch  libintmatchTarget.xcconfig
xi-int/xcode/libintrange/: libintrange-Prefix.pch  libintrangeTarget.xcconfig
xi-int/xcode/libintsat/: libintsat-Prefix.pch  libintsatTarget.xcconfig
xi-int/xqx/: .gdbinit  .noumul.swp  .umul.swp  LeakTracer.bc  LeakTracer.cc  LeakTracer.ll  add-ori.bc  add-ori.bc.dis  add-ori.s  add-ori1.bc  add-ori1.s  add.bc  add.bc.dis  add.c  add.i-YRxLli  add.i-bTLz0R  add.i-l89yLC  add.i-xGWgut  add.ll  add.s  find  int_overflow.bc  int_overflow.c  intsat-gdb  loop.bc  mpt2sas-2011-1494.c  noumul  rpc-2002-0391.bc  s2etest.bc  s2etest.c  s2etest.ll  s2etest.mtest.json  temp_sock_diag.bc  temp_sock_diag.c  test.bc  test.c  umul  vt.c
